# mcp-server-templates-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/template_mcp_server/: __init__.py  app.py  config.py  errors.py  main.py  middleware.py  platform_oauth.py  telemetry.py  tools.py
src/yaaif_mcp_server_template_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_app.py  test_config.py  test_middleware.py  test_platform_oauth.py  test_tools.py
